platform/gitops/components/secrets/kms-shim/patch-vpa-requests-deployment-kms-shim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kms-shim
spec:
  template:
    spec:
      containers:
        - name: kms-shim
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              memory: "96Mi"
