platform/gitops/components/secrets/kms-shim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kms-shim
spec:
  selector:
    app.kubernetes.io/name: kms-shim
  ports:
    - name: http
      port: 8200
      targetPort: http
